# marketing-agent_for_Ootsav.in

./: README.md  app.py  code_dump_v2.txt  config.py  creative_director_prompts.py  main.py  models.py  prompts.py  pyproject.toml  state.py
graphs/: conversation_graph.py  creative_graph.py
new-changes/mcp_files/: MIGRATION_NOTES.md  config.py  higgsfield_mcp_client.py  image_generation.py  pyproject.toml
nodes/: brain.py  creative_director.py  image_generator.py
utils/: graph_runner.py  image_generation.py  llm.py  workflow.py
