[project]
name = "ootsav-ads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.0",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
]

# "higgsfield-client" removed — image generation now goes through
# Higgsfield's hosted MCP server (see utils/higgsfield_mcp_client.py)
# instead of their plain REST API key/secret endpoint.
